--- a/.github/workflows/build-immortalwrt.yml
+++ b/.github/workflows/build-immortalwrt.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build ImmortalWrt
+name: 构建CMCC_RAX_3000Z增强版_ImmortalWrt
 
 permissions: write-all
 # 开启写权限，防止无法上传到release
