Update and rename 构建CMCC_RAX_3000Z增强版_ImmortalWrt.yml to 构建_ImmortalWrt_23.05.yml

--- a/.github/workflows/构建_ImmortalWrt_23.05.yml
+++ b/.github/workflows/构建_ImmortalWrt_23.05.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: 构建CMCC_RAX_3000Z增强版_ImmortalWrt
+name: 构建_ImmortalWrt_23.05_CMCC_RAX_3000Z增强版
 
 permissions: write-all
 # 开启写权限，防止无法上传到release
