--- a/configs/rax3000m-emmc_mtksdk.config
+++ b/configs/rax3000m-emmc_mtksdk.config
@@ -267,7 +267,134 @@ CONFIG_PACKAGE_kmod-usb-net-ipheth=y
 #
 # Applications
 #
+
+## 动态DNS
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts_aliyun=y
+CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+CONFIG_PACKAGE_ddns-scripts-cnkuai=y
+CONFIG_PACKAGE_ddns-scripts-digitalocean=y
+CONFIG_PACKAGE_ddns-scripts-dnspod=y
+CONFIG_PACKAGE_ddns-scripts-dnspod-com=y
+CONFIG_PACKAGE_ddns-scripts-freedns=y
+CONFIG_PACKAGE_ddns-scripts-gandi=y
+CONFIG_PACKAGE_ddns-scripts-godaddy=y
+CONFIG_PACKAGE_ddns-scripts-noip=y
+CONFIG_PACKAGE_ddns-scripts-nsupdate=y
+CONFIG_PACKAGE_ddns-scripts-route53=y
+## ssr
+CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+## passwall
+CONFIG_PACKAGE_luci-app-passwall=y
+## openclash
+CONFIG_PACKAGE_luci-app-openclash=y
+## 简单mesh
+CONFIG_PACKAGE_luci-app-easymesh=y
+## 集客ac控制器
+CONFIG_PACKAGE_luci-app-gecoosac=y
+## 应用过滤
+CONFIG_PACKAGE_luci-app-oaf=y
+## istore商店
+CONFIG_PACKAGE_luci-app-store=y
+## uu加速器
+CONFIG_PACKAGE_luci-app-uugamebooster=y
+CONFIG_PACKAGE_luci-i18n-uugamebooster-zh-cn=y
+## 上网时间控制
 CONFIG_PACKAGE_luci-app-accesscontrol=y
+CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
+## 阿里云盘webdav
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
+## adguardhome
+CONFIG_PACKAGE_luci-app-adguardhome=y
+## alist文件列表
+CONFIG_PACKAGE_luci-app-alist=y
+## 定时重启
+CONFIG_PACKAGE_luci-app-autoreboot=y
+CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
+## 硬盘休眠
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
+## 内部插件
+## dockerman
+CONFIG_PACKAGE_luci-app-dockerman=y
+## ttyd终端
+CONFIG_PACKAGE_luci-app-ttyd=y
+## IP/MAC绑定
+CONFIG_PACKAGE_luci-app-arpbind=y
+## 看IPTV的
+CONFIG_PACKAGE_luci-app-msd_lite=y
+## 网络唤醒
+CONFIG_PACKAGE_luci-app-wol=y
+## KMS服务器
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+## 网速控制
+CONFIG_PACKAGE_luci-app-eqos-mtk=y
+## 
+CONFIG_PACKAGE_luci-app-upnp=y
+## SAMBA4网络共享
+CONFIG_PACKAGE_luci-app-samba4=y
+## FTP服务器
+CONFIG_PACKAGE_luci-app-vsftpd=y
+## 两个VPN服务器
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-openvpn-server=y
+CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
+CONFIG_PACKAGE_tailscale=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_qrencode=y
+CONFIG_PACKAGE_coremark=y
+CONFIG_PACKAGE_vim-full=y
+CONFIG_PACKAGE_zsh=y
+CONFIG_PACKAGE_gdisk=y
+CONFIG_PACKAGE_sgdisk=y
+## 针对USB3加的一些插件和依赖
+## RAX3000M eMMC默认配置已开启MT7981_USB_PKGS和luci-app-samba4
+## MT7981_USB_PKGS := automount blkid blockdev fdisk \
+##    kmod-nls-cp437 kmod-nls-iso8859-1 kmod-usb2 kmod-usb3 \
+##    luci-app-usb-printer luci-i18n-usb-printer-zh-cn \
+##    kmod-usb-net-rndis usbutils
+## 磁盘管理
+CONFIG_PACKAGE_luci-app-diskman=y
+CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
+CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
+## qb种子
+# CONFIG_PACKAGE_luci-app-qbittorrent is not set
+## usb3开关
+CONFIG_PACKAGE_luci-app-usb3disable=y
+## usb打印服务器
+CONFIG_PACKAGE_luci-app-usb-printer=y
+CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
+CONFIG_PACKAGE_kmod-usb-net-ipheth=y
+CONFIG_PACKAGE_kmod-usb-net-aqc111=y
+CONFIG_PACKAGE_kmod-usb-net-rtl8152-vendor=y
+CONFIG_PACKAGE_kmod-usb-net-sierrawireless=y
+CONFIG_PACKAGE_kmod-usb-ohci=y
+CONFIG_PACKAGE_kmod-usb-uhci=y
+CONFIG_PACKAGE_usb-modeswitch=y
+CONFIG_PACKAGE_sendat=y
+
+
+
+## 在线安装alist所需依赖
+CONFIG_PACKAGE_kmod-fuse=y
+## 在线安装docker所需依赖
+CONFIG_PACKAGE_kmod-dm=y
+CONFIG_PACKAGE_kmod-br-netfilter=y
+CONFIG_PACKAGE_kmod-ikconfig=y
+CONFIG_PACKAGE_kmod-nf-ipvs=y
+CONFIG_PACKAGE_kmod-veth=y
+## 针对eMMC加的一些文件系统和工具
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-f2fs=y
+CONFIG_PACKAGE_e2fsprogs=y
+CONFIG_PACKAGE_f2fs-tools=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_mmc-utils=y
+
+
+
 # CONFIG_PACKAGE_luci-app-acl is not set
 # CONFIG_PACKAGE_luci-app-acme is not set
 # CONFIG_PACKAGE_luci-app-adblock is not set
@@ -283,9 +410,7 @@ CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-appfilter is not set
 CONFIG_PACKAGE_luci-app-argon-config=y
 # CONFIG_PACKAGE_luci-app-aria2 is not set
-CONFIG_PACKAGE_luci-app-arpbind=y
 # CONFIG_PACKAGE_luci-app-attendedsysupgrade is not set
-CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-babeld is not set
 # CONFIG_PACKAGE_luci-app-baidupcs-web is not set
 # CONFIG_PACKAGE_luci-app-banip is not set
@@ -323,7 +448,6 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 # CONFIG_PACKAGE_luci-app-dump1090 is not set
 # CONFIG_PACKAGE_luci-app-dynapoint is not set
 # CONFIG_PACKAGE_luci-app-eoip is not set
-CONFIG_PACKAGE_luci-app-eqos-mtk=y
 # CONFIG_PACKAGE_luci-app-fileassistant is not set
 # CONFIG_PACKAGE_luci-app-filebrowser is not set
 CONFIG_PACKAGE_luci-app-filetransfer=y
@@ -335,7 +459,6 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-gowebdav is not set
 CONFIG_PACKAGE_luci-app-guest-wifi=y
 # CONFIG_PACKAGE_luci-app-haproxy-tcp is not set
-CONFIG_PACKAGE_luci-app-hd-idle=y
 # CONFIG_PACKAGE_luci-app-hnet is not set
 # CONFIG_PACKAGE_luci-app-https-dns-proxy is not set
 # CONFIG_PACKAGE_luci-app-ipsec-vpnd is not set
@@ -378,11 +501,9 @@ CONFIG_PACKAGE_luci-app-nlbwmon=y
 # CONFIG_PACKAGE_luci-app-olsr-services is not set
 # CONFIG_PACKAGE_luci-app-olsr-viz is not set
 # CONFIG_PACKAGE_luci-app-omcproxy is not set
-CONFIG_PACKAGE_luci-app-openclash=y
 CONFIG_PACKAGE_iptables-mod-tproxy=y
 CONFIG_PACKAGE_iptables-mod-extra=y
 CONFIG_PACKAGE_luci-app-openvpn=y
-CONFIG_PACKAGE_luci-app-openvpn-server=y
 CONFIG_PACKAGE_luci-app-opkg=y
 # CONFIG_PACKAGE_luci-app-oscam is not set
 # CONFIG_PACKAGE_luci-app-p910nd is not set
@@ -481,8 +602,7 @@ CONFIG_PACKAGE_luci-app-timecontrol=y
 # CONFIG_PACKAGE_luci-app-transmission is not set
 # CONFIG_PACKAGE_luci-app-travelmate is not set
 # CONFIG_PACKAGE_luci-app-trojan-server is not set
-CONFIG_PACKAGE_luci-app-ttyd=y
-# CONFIG_PACKAGE_luci-app-turboacc is not set
+CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_NO_FASTPATH=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FLOW_OFFLOADING is not set
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_FAST_CLASSIFIER is not set
@@ -494,8 +614,6 @@ CONFIG_PACKAGE_luci-app-turboacc-mtk=y
 # CONFIG_PACKAGE_luci-app-uhttpd is not set
 # CONFIG_PACKAGE_luci-app-unblockneteasemusic is not set
 # CONFIG_PACKAGE_luci-app-unbound is not set
-CONFIG_PACKAGE_luci-app-upnp=y
-CONFIG_PACKAGE_luci-app-usb-printer=y
 # CONFIG_PACKAGE_luci-app-usb3disable is not set
 # CONFIG_PACKAGE_luci-app-uugamebooster is not set
 # CONFIG_PACKAGE_luci-app-v2ray-server is not set
@@ -525,7 +643,7 @@ CONFIG_PACKAGE_luci-app-usb-printer=y
 # CONFIG_PACKAGE_luci-app-xinetd is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-yggdrasil is not set
-CONFIG_PACKAGE_luci-app-zerotier=y
+
 # end of Applications
 
 #
