--- a/configs/rax3000m-emmc_mtksdk.config
+++ b/configs/rax3000m-emmc_mtksdk.config
@@ -267,6 +267,23 @@ CONFIG_PACKAGE_kmod-usb-net-ipheth=y
 #
 # Applications
 #
+## 简单mesh
+CONFIG_PACKAGE_luci-app-easymesh=y
+## istore商店
+CONFIG_PACKAGE_luci-app-store=y
+## 上网时间控制
+CONFIG_PACKAGE_luci-app-accesscontrol=y
+## 硬盘休眠
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
+## 网速控制
+CONFIG_PACKAGE_luci-app-eqos-mtk=y
+
+## FROS插件
+CONFIG_PACKAGE_fros=y
+echo "CONFIG_PACKAGE_fros_files=y
+echo "CONFIG_PACKAGE_luci-app-fros=y
+
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-acl is not set
 # CONFIG_PACKAGE_luci-app-acme is not set
