--- a/configs/rax3000m-emmc_mtksdk.config
+++ b/configs/rax3000m-emmc_mtksdk.config
@@ -328,8 +328,8 @@ CONFIG_PACKAGE_mmc-utils=y
 
 ## FROS插件
 CONFIG_PACKAGE_fros=y
-echo "CONFIG_PACKAGE_fros_files=y
-echo "CONFIG_PACKAGE_luci-app-fros=y
+CONFIG_PACKAGE_fros_files=y
+CONFIG_PACKAGE_luci-app-fros=y
 
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-acl is not set
