--- a/configs/rax3000m-emmc.config
+++ b/configs/rax3000m-emmc.config
@@ -151,8 +151,8 @@ CONFIG_PACKAGE_mmc-utils=y
 
 ## FROS插件
 CONFIG_PACKAGE_fros=y
-echo "CONFIG_PACKAGE_fros_files=y
-echo "CONFIG_PACKAGE_luci-app-fros=y
+CONFIG_PACKAGE_fros_files=y
+CONFIG_PACKAGE_luci-app-fros=y
 
 # CONFIG_PACKAGE_luci-app-amule is not set
 # CONFIG_PACKAGE_luci-app-apinger is not set
