--- a/configs/rax3000m-emmc_mtksdk.config
+++ b/configs/rax3000m-emmc_mtksdk.config
@@ -267,6 +267,28 @@ CONFIG_PACKAGE_kmod-usb-net-ipheth=y
 #
 # Applications
 #
+## 简单mesh
+CONFIG_PACKAGE_luci-app-easymesh=y
+## istore商店
+CONFIG_PACKAGE_luci-app-store=y
+## 上网时间控制
+CONFIG_PACKAGE_luci-app-accesscontrol=y
+## 硬盘休眠
+CONFIG_PACKAGE_luci-app-hd-idle=y
+CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
+## 网速控制
+CONFIG_PACKAGE_luci-app-eqos-mtk=y
+## IP/MAC绑定
+CONFIG_PACKAGE_luci-app-arpbind=y
+## FTP服务器
+CONFIG_PACKAGE_luci-app-vsftpd=y
+## 两个VPN服务器
+CONFIG_PACKAGE_luci-app-zerotier=y
+CONFIG_PACKAGE_luci-app-openvpn-server=y
+## KMS服务器
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+
+
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-acl is not set
 # CONFIG_PACKAGE_luci-app-acme is not set
