--- a/configs/rax3000m-emmc_mtksdk.config
+++ b/configs/rax3000m-emmc_mtksdk.config
@@ -223,6 +223,7 @@ CONFIG_PACKAGE_wifi-profile=y
 CONFIG_WIFI_NORMAL_SETTING=y
 # end of WLAN LUCI
 
+
 CONFIG_PACKAGE_mii_mgr=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_mtkhqos_util=y
@@ -267,6 +268,13 @@ CONFIG_PACKAGE_cfdisk=y
 #
 # Applications
 #
+## ssr
+CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
+CONFIG_PACKAGE_luci-app-ssr-plus=y
+## passwall
+CONFIG_PACKAGE_luci-app-passwall=y
+## openclash
+CONFIG_PACKAGE_luci-app-openclash=y
 ## 简单mesh
 CONFIG_PACKAGE_luci-app-easymesh=y
 ## istore商店
@@ -285,6 +293,23 @@ CONFIG_PACKAGE_luci-app-vsftpd=y
 ## 两个VPN服务器
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-app-openvpn-server=y
+CONFIG_PACKAGE_luci-app-ipsec-vpnserver-manyusers=y
+CONFIG_PACKAGE_tailscale=y
+CONFIG_PACKAGE_luci-app-wireguard=y
+CONFIG_PACKAGE_qrencode=y
+CONFIG_PACKAGE_coremark=y
+CONFIG_PACKAGE_vim-full=y
+CONFIG_PACKAGE_zsh=y
+CONFIG_PACKAGE_gdisk=y
+CONFIG_PACKAGE_sgdisk=y
+## 针对USB3加的一些插件和依赖
+## RAX3000M eMMC默认配置已开启MT7981_USB_PKGS和luci-app-samba4
+## MT7981_USB_PKGS := automount blkid blockdev fdisk \
+##    kmod-nls-cp437 kmod-nls-iso8859-1 kmod-usb2 kmod-usb3 \
+##    luci-app-usb-printer luci-i18n-usb-printer-zh-cn \
+##    kmod-usb-net-rndis usbutils
+## 磁盘管理
+CONFIG_PACKAGE_luci-app-diskman=y
 ## KMS服务器
 CONFIG_PACKAGE_luci-app-vlmcsd=y
 
@@ -318,7 +343,13 @@ CONFIG_PACKAGE_kmod-br-netfilter=y
 CONFIG_PACKAGE_kmod-ikconfig=y
 CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-veth=y
-
+## 针对eMMC加的一些文件系统和工具
+CONFIG_PACKAGE_kmod-fs-ext4=y
+CONFIG_PACKAGE_kmod-fs-f2fs=y
+CONFIG_PACKAGE_e2fsprogs=y
+CONFIG_PACKAGE_f2fs-tools=y
+CONFIG_PACKAGE_lsblk=y
+CONFIG_PACKAGE_mmc-utils=y
 
 
 
@@ -342,9 +373,9 @@ echo "CONFIG_PACKAGE_luci-app-fros=y
 # CONFIG_PACKAGE_luci-app-airplay2 is not set
 # CONFIG_PACKAGE_luci-app-airwhu is not set
 # CONFIG_PACKAGE_luci-app-aliddns is not set
-# CONFIG_PACKAGE_luci-app-alist is not set
+CONFIG_PACKAGE_luci-app-alist=y
 # CONFIG_PACKAGE_luci-app-amule is not set
-# CONFIG_PACKAGE_luci-app-appfilter is not set
+CONFIG_PACKAGE_luci-app-appfilter=y
 CONFIG_PACKAGE_luci-app-argon-config=y
 # CONFIG_PACKAGE_luci-app-aria2 is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
@@ -382,8 +413,8 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 # CONFIG_PACKAGE_luci-app-dnscrypt-proxy is not set
 # CONFIG_PACKAGE_luci-app-dnsforwarder is not set
 # CONFIG_PACKAGE_luci-app-dnspod is not set
-# CONFIG_PACKAGE_luci-app-docker is not set
-# CONFIG_PACKAGE_luci-app-dockerman is not set
+CONFIG_PACKAGE_luci-app-docker=y
+CONFIG_PACKAGE_luci-app-dockerman=y
 # CONFIG_PACKAGE_luci-app-dump1090 is not set
 # CONFIG_PACKAGE_luci-app-dynapoint is not set
 # CONFIG_PACKAGE_luci-app-eoip is not set
