--- a/configs/rax3000m-emmc_mtksdk.config
+++ b/configs/rax3000m-emmc_mtksdk.config
@@ -277,6 +277,10 @@ CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-openclash=y
 ## 简单mesh
 CONFIG_PACKAGE_luci-app-easymesh=y
+## 集客ac控制器
+CONFIG_PACKAGE_luci-app-gecoosac=y
+## 应用过滤
+CONFIG_PACKAGE_luci-app-oaf=y
 ## istore商店
 CONFIG_PACKAGE_luci-app-store=y
 ## 上网时间控制
