--- a/configs/rax3000m-emmc_FROS.config
+++ b/configs/rax3000m-emmc_FROS.config
@@ -280,7 +280,7 @@ CONFIG_PACKAGE_luci-app-easymesh=y
 ## 集客ac控制器
 CONFIG_PACKAGE_luci-app-gecoosac=y
 ## 应用过滤
-CONFIG_PACKAGE_luci-app-oaf=y
+# CONFIG_PACKAGE_luci-app-oaf=y
 ## istore商店
 CONFIG_PACKAGE_luci-app-store=y
 ## 上网时间控制
@@ -292,6 +292,9 @@ CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
 CONFIG_PACKAGE_luci-app-eqos-mtk=y
 ## IP/MAC绑定
 CONFIG_PACKAGE_luci-app-arpbind=y
+## 访客WiFi 
+CONFIG_PACKAGE_luci-app-guest-wifi=y
+
 ## FTP服务器
 CONFIG_PACKAGE_luci-app-vsftpd=y
 ## 两个VPN服务器
