--- a/configs/rax3000m-emmc_FROS.config
+++ b/configs/rax3000m-emmc_FROS.config
@@ -268,6 +268,24 @@ CONFIG_PACKAGE_cfdisk=y
 #
 # Applications
 #
+## 阿里ddns
+CONFIG_PACKAGE_luci-app-aliddns is not set
+CONFIG_PACKAGE_luci-i18n-aliddns-zh-cn is not set
+## 动态DNS
+CONFIG_PACKAGE_luci-app-ddns=y
+CONFIG_PACKAGE_ddns-scripts=y
+CONFIG_PACKAGE_ddns-scripts_aliyun=y
+CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+CONFIG_PACKAGE_ddns-scripts-cnkuai=y
+CONFIG_PACKAGE_ddns-scripts-digitalocean=y
+CONFIG_PACKAGE_ddns-scripts-dnspod=y
+CONFIG_PACKAGE_ddns-scripts-dnspod-com=y
+CONFIG_PACKAGE_ddns-scripts-freedns=y
+CONFIG_PACKAGE_ddns-scripts-gandi=y
+CONFIG_PACKAGE_ddns-scripts-godaddy=y
+CONFIG_PACKAGE_ddns-scripts-noip=y
+CONFIG_PACKAGE_ddns-scripts-nsupdate=y
+CONFIG_PACKAGE_ddns-scripts-route53=y
 ## ssr
 CONFIG_PACKAGE_luci-i18n-ssr-plus-zh-cn=y
 CONFIG_PACKAGE_luci-app-ssr-plus=y
@@ -280,21 +298,66 @@ CONFIG_PACKAGE_luci-app-easymesh=y
 ## 集客ac控制器
 CONFIG_PACKAGE_luci-app-gecoosac=y
 ## 应用过滤
-# CONFIG_PACKAGE_luci-app-oaf=y
+# CONFIG_PACKAGE_luci-app-oaf is not set
 ## istore商店
 CONFIG_PACKAGE_luci-app-store=y
+## 京东签到
+# CONFIG_PACKAGE_luci-app-jd-dailybonus is not set
+## 增加插件
+## 网易云解灰
+# CONFIG_PACKAGE_luci-app-unblockmusic is not set
+## 可道云
+# CONFIG_PACKAGE_luci-app-kodexplorer is not set
+# CONFIG_PACKAGE_luci-i18n-kodexplorer-zh-cn is not set
+## aria2种子
+CONFIG_PACKAGE_luci-app-aria2=y
+CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
+#3 airplay2音频服务器
+CONFIG_PACKAGE_luci-app-airplay2=y
+CONFIG_PACKAGE_luci-i18n-airplay2-zh-cn=y
+## uu加速器
+CONFIG_PACKAGE_luci-app-uugamebooster=y
+CONFIG_PACKAGE_luci-i18n-uugamebooster-zh-cn=y
 ## 上网时间控制
 CONFIG_PACKAGE_luci-app-accesscontrol=y
+CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
+## 阿里云盘webdav
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
+## adguardhome
+CONFIG_PACKAGE_luci-app-adguardhome=y
+## alist文件列表
+CONFIG_PACKAGE_luci-app-alist=y
+## mosdns
+# CONFIG_PACKAGE_luci-app-mosdns is not set
+## 定时重启
+CONFIG_PACKAGE_luci-app-autoreboot=y
+CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 ## 硬盘休眠
 CONFIG_PACKAGE_luci-app-hd-idle=y
 CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn=y
-## 网速控制
-CONFIG_PACKAGE_luci-app-eqos-mtk=y
+## 内部插件
+## dockerman
+CONFIG_PACKAGE_luci-app-dockerman=y
+## ttyd终端
+CONFIG_PACKAGE_luci-app-ttyd=y
 ## IP/MAC绑定
 CONFIG_PACKAGE_luci-app-arpbind=y
+## 看IPTV的
+CONFIG_PACKAGE_luci-app-msd_lite=y
+## lucky大吉
+CONFIG_PACKAGE_luci-app-lucky=y
+## 网络唤醒
+CONFIG_PACKAGE_luci-app-wol=y
+## KMS服务器
+CONFIG_PACKAGE_luci-app-vlmcsd=y
+## 网速控制
+CONFIG_PACKAGE_luci-app-eqos-mtk=y
+## 
+CONFIG_PACKAGE_luci-app-upnp=y
+## SAMBA4网络共享
+CONFIG_PACKAGE_luci-app-samba4=y
 ## 访客WiFi 
 CONFIG_PACKAGE_luci-app-guest-wifi=y
-
 ## FTP服务器
 CONFIG_PACKAGE_luci-app-vsftpd=y
 ## 两个VPN服务器
@@ -317,9 +380,10 @@ CONFIG_PACKAGE_sgdisk=y
 ##    kmod-usb-net-rndis usbutils
 ## 磁盘管理
 CONFIG_PACKAGE_luci-app-diskman=y
-## KMS服务器
-CONFIG_PACKAGE_luci-app-vlmcsd=y
-
+## qb种子
+# CONFIG_PACKAGE_luci-app-qbittorrent is not set
+## usb3开关
+CONFIG_PACKAGE_luci-app-usb3disable=y
 ## usb打印服务器
 CONFIG_PACKAGE_luci-app-usb-printer=y
 CONFIG_PACKAGE_kmod-usb-net-huawei-cdc-ncm=y
@@ -357,11 +421,6 @@ CONFIG_PACKAGE_e2fsprogs=y
 CONFIG_PACKAGE_f2fs-tools=y
 CONFIG_PACKAGE_lsblk=y
 CONFIG_PACKAGE_mmc-utils=y
-
-
-
-
-
 
 
 ## FROS插件
