--- a/.github/workflows/构建_FROS_21.02（H大）.yml
+++ b/.github/workflows/构建_FROS_21.02（H大）.yml
@@ -147,6 +147,13 @@ jobs:
         cd openwrt
         echo -e "$(($(nproc)+1)) thread compile"
         make -j$(($(nproc)+1)) || make -j$(nproc) || make -j1 V=s
+
+        fi
+        if grep -q 'CONFIG_PACKAGE_luci-app-dockerman=y' .config; then
+                echo "BUILD_DOCKERMAN=docker" >> $GITHUB_ENV
+        else
+                echo "BUILD_DOCKERMAN=" >> $GITHUB_ENV
+                
         echo "status=success" >> $GITHUB_OUTPUT
 
     - name: 空间使用情况
@@ -206,12 +213,12 @@ jobs:
         max_frequency=$(($(grep -oP "max-frequency = <\K[0-9]*" openwrt/target/linux/mediatek/files-5.4/arch/arm64/boot/dts/mediatek/mt7981-cmcc-rax3000m-emmc.dts) / 1000000))
         echo "- 使用闪存频率: ${max_frequency}MHz" >> release.txt
         fi
-        if grep -q 'CONFIG_PACKAGE_luci-app-dockerman=y' .config; then
+        if [[ "${{ env.BUILD_DOCKERMAN }}" == 'docker' ]]; then
                 echo "- 已编译luci-app-dockerman" >> release.txt
         else
                 echo "- 未编译luci-app-dockerman" >> release.txt
         
-        release_tag=$(date +"%Y.%m.%d-mt7981-CMCC XR30 eMMC (RAX3000Z增强版)-${wlan_luci_interface}-${eeprom_status}-${max_frequency}MHz")
+        release_tag=$(date +"%Y.%m.%d-mt7981-CMCC XR30 eMMC (RAX3000Z增强版)-${wlan_luci_interface}-${eeprom_status}-${max_frequency}MHz-${{ env.BUILD_DOCKERMAN }}")
         echo "release_tag=${release_tag}" >> $GITHUB_OUTPUT
         echo "status=success" >> $GITHUB_OUTPUT
 
