--- a/configs/rax3000m-emmc_FROS.config
+++ b/configs/rax3000m-emmc_FROS.config
@@ -224,6 +224,16 @@ CONFIG_WIFI_NORMAL_SETTING=y
 # end of WLAN LUCI
 
 
+## 使用mtwifi-cfg无线配置
+CONFIG_PACKAGE_luci-app-mtwifi-cfg=y
+CONFIG_PACKAGE_luci-i18n-mtwifi-cfg-zh-cn=y
+CONFIG_PACKAGE_mtwifi-cfg=y
+CONFIG_PACKAGE_lua-cjson=y
+## 使用新的无线驱动
+CONFIG_MTK_MT_WIFI_DRIVER_VERSION_7672=y
+CONFIG_MTK_MT_WIFI_MT7981_20240823=y
+
+
 CONFIG_PACKAGE_mii_mgr=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_mtkhqos_util=y
@@ -322,7 +332,7 @@ CONFIG_PACKAGE_luci-i18n-uugamebooster-zh-cn=y
 CONFIG_PACKAGE_luci-app-accesscontrol=y
 CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
 ## 阿里云盘webdav
-CONFIG_PACKAGE_luci-app-aliyundrive-webdav is not set
+CONFIG_PACKAGE_luci-app-aliyundrive-webdav=y
 ## adguardhome
 CONFIG_PACKAGE_luci-app-adguardhome=y
 ## alist文件列表
@@ -356,8 +366,20 @@ CONFIG_PACKAGE_luci-app-eqos-mtk=y
 CONFIG_PACKAGE_luci-app-upnp=y
 ## SAMBA4网络共享
 CONFIG_PACKAGE_luci-app-samba4=y
+
+
 ## 访客WiFi 
 CONFIG_PACKAGE_luci-app-guest-wifi=y
+##定时/开机任务
+CONFIG_PACKAGE_luci-app-autotimeset=y
+## 家长控制
+CONFIG_PACKAGE_luci-app-parentcontrol=y
+## 家长控制
+CONFIG_PACKAGE_luci-app-parentcontrol=y
+
+
+
+
 ## FTP服务器
 CONFIG_PACKAGE_luci-app-vsftpd=y
 ## 两个VPN服务器
@@ -425,8 +447,8 @@ CONFIG_PACKAGE_mmc-utils=y
 
 ## FROS插件
 CONFIG_PACKAGE_fros=y
-echo "CONFIG_PACKAGE_fros_files=y
-echo "CONFIG_PACKAGE_luci-app-fros=y
+CONFIG_PACKAGE_fros_files=y
+CONFIG_PACKAGE_luci-app-fros=y
 
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 # CONFIG_PACKAGE_luci-app-acl is not set
