--- a/.github/workflows/构建_FROS_21.02（H大）.yml
+++ b/.github/workflows/构建_FROS_21.02（H大）.yml
@@ -9,7 +9,7 @@
 #
 
 ###############手动修改##############
-name: 1构建_FROS_21.02（基于H大）CMCC_RAX_3000Z增强版
+name: 构建_FROS_21.02（基于H大）CMCC_RAX_3000Z增强版
 
 permissions: write-all
 # 开启写权限，防止无法上传到release
