--- a/.github/workflows/构建_ImmortalWrt_23.05.yml
+++ b/.github/workflows/构建_ImmortalWrt_23.05.yml
@@ -197,30 +197,12 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-   # - name: 删除过时工作流程
-     # uses: Mattraks/delete-workflow-runs@v2
-     # with:
-        #token: ${{ secrets.GITHUB_TOKEN }}
-        #repository: ${{ github.repository }}
-        #retain_days: 1
-        #keep_minimum_runs: 3
-
-    - name: 删除工作流运行(Delete workflow runs)
-      uses: GitRML/delete-workflow-runs@main
+    - name: 删除过时工作流程
+      uses: Mattraks/delete-workflow-runs@v2
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        repository: ${{ github.repository }}
         retain_days: 1
         keep_minimum_runs: 3
-        token: ${{ secrets.GH_TOKEN }}
-        body: |
 
-            ### OpenWrt Image information
-            - Default IP: 192.168.5.1
-            - Default username: root
-            - Default password: password
-            - Default WIFI name: HiWiFi
-            - Default WIFI password: he1235678
-            ### Install to EMMC
-            - Login to OpenWrt → System → Amlogic Service → Install OpenWrt
-            ### OpenWrt Image Verification
-            - sha256sum
-    
+  
