--- a/.github/workflows/构建_ImmortalWrt_23.05.yml
+++ b/.github/workflows/构建_ImmortalWrt_23.05.yml
@@ -32,6 +32,8 @@ on:
         type: boolean
 
 env:
+  OPENWRT_NAME: immortalwrt
+  UPLOAD_TAG_NAME: xr30-emmc
   REPO_URL: https://github.com/immortalwrt/immortalwrt
   REPO_BRANCH: openwrt-23.05
   FREE_DISK_SH: scripts/free_disk_space.sh
@@ -174,7 +176,7 @@ jobs:
         fi
         max_frequency=$(($(grep -oP "max-frequency = <\K[0-9]*" openwrt/target/linux/mediatek/dts/mt7981b-cmcc-rax3000m-emmc-ubootmod.dts) / 1000000))
         echo "- 使用闪存频率: ${max_frequency}MHz" >> release.txt
-        release_tag=$(date +"%Y.%m.%d-23.05-SNAPSHOT-rax3000m-emmc-ubootmod-${eeprom_status}-${max_frequency}MHz")
+        release_tag=$(date +"%Y.%m.%d-${{ env.REPO_BRANCH }}-${{ env.OPENWRT_NAME }}-${{ env.UPLOAD_TAG_NAME }}-ubootmod-${eeprom_status}-${max_frequency}MHz")
         echo "release_tag=${release_tag}" >> $GITHUB_OUTPUT
         echo "status=success" >> $GITHUB_OUTPUT
 
